conditional team view for netic

--- a/projects/netic.html
+++ b/projects/netic.html
@@ -118,67 +118,134 @@
                         id="team-header"><u style="border-bottom: 10px solid #99CCFF;">team</u></h3>
                     </div>
                     <div class="col-lg-9" style="font-style: normal;">
+                      <div class="web-team">
                         <div class="team-container">
-                            <div class="row d-flex flex-column flex-wrap flex-md-nowrap">
+                          <div class="row d-flex flex-column flex-wrap flex-md-nowrap">
                             <div class="row">
-                                <div class="col">
-                                  <a href="https://www.linkedin.com/in/anika-singhania-b07b31179/">
-                                    <img src="../assets/img/netic/people/anika.svg" alt="anika" />
-                                    <a href="https://www.linkedin.com/in/anika-singhania-b07b31179/">
-                                      <h7>Anika</h7> <p id="teaminfo">Singhania</p>
-                                    </a>
-                                      <p id="teaminfo">Project Lead</p>
-                                      <p id="teaminfo">Freshman | CompSci</p>
-                                  </a>
-                                </div>
-                                <div class="col">
+                              <div class="col">
+                                <a href="https://www.linkedin.com/in/anika-singhania-b07b31179/">
+                                  <img src="../assets/img/netic/people/anika.svg" alt="anika" />
+                                </a>
+                                <a href="https://www.linkedin.com/in/anika-singhania-b07b31179/">
+                                  <h7>Anika</h7> <p id="teaminfo">Singhania</p>
+                                </a>
+                                <p id="teaminfo">Project Lead</p>
+                                <p id="teaminfo">Freshman | CompSci</p>
+                              </div>
+                              <div class="col">
+                                <a href="https://www.linkedin.com/in/allan-lee-22a0a614a/">
+                                  <img src="../assets/img/netic/people/allan.svg" alt="allan" />
                                   <a href="https://www.linkedin.com/in/allan-lee-22a0a614a/">
-                                    <img src="../assets/img/netic/people/allan.svg" alt="allan" />
-                                    <a href="https://www.linkedin.com/in/allan-lee-22a0a614a/">
-                                      <h7>Allan</h7>  <p id="teaminfo">Lee</p>
-                                    </a>
-                                      <p id="teaminfo">Design Consultant</p>
-                                      <p id="teaminfo">Junior | BioE</p>
+                                    <h7>Allan</h7>  <p id="teaminfo">Lee</p>
                                   </a>
-                                </div>
-                                <div class="col">
+                                    <p id="teaminfo">Design Consultant</p>
+                                    <p id="teaminfo">Junior | BioE</p>
+                                </a>
+                              </div>
+                              <div class="col">
+                                <a href="https://www.linkedin.com/in/leilani-chu-342563130/">
+                                  <img src="../assets/img/netic/people/leilani.svg" alt="leilani" />
                                   <a href="https://www.linkedin.com/in/leilani-chu-342563130/">
-                                    <img src="../assets/img/netic/people/leilani.svg" alt="leilani" />
-                                    <a href="https://www.linkedin.com/in/leilani-chu-342563130/">
-                                      <h7>Leilani</h7> <p id="teaminfo">Chu</p>
-                                    </a>
-                                      <p id="teaminfo">UI Designer</p>
-                                      <p id="teaminfo">Senior | Molecular & Cell Biology</p>
+                                    <h7>Leilani</h7> <p id="teaminfo">Chu</p>
                                   </a>
-                                </div>
-                                <div class="col">
+                                    <p id="teaminfo">UI Designer</p>
+                                    <p id="teaminfo">Senior | Molecular & Cell Biology</p>
+                                </a>
+                              </div>
+                              <div class="col">
+                                <a href="https://www.linkedin.com/in/philippa-steinberg-78aa031a1/">
+                                  <img src="../assets/img/netic/people/philippa.svg" alt="philippa" />
                                   <a href="https://www.linkedin.com/in/philippa-steinberg-78aa031a1/">
-                                    <img src="../assets/img/netic/people/philippa.svg" alt="philippa" />
-                                    <a href="https://www.linkedin.com/in/philippa-steinberg-78aa031a1/">
-                                      <h7>Philippa</h7> <p id="teaminfo">Steinberg</p>
-                                    </a>
-                                      <p id="teaminfo">UI Designer</p>
-                                      <p id="teaminfo">Freshman | Molecular & Cell Biology</p>
+                                    <h7>Philippa</h7> <p id="teaminfo">Steinberg</p>
                                   </a>
-                                </div>
-                                <div class="col">
-                                    <img src="../assets/img/netic/people/reid.svg" alt="reid" />
-                                    <h7>Reid</h7> <p id="teaminfo">Johnson</p>
-                                    <p id="teaminfo">Coding Consultant</p>
-                                    <p id="teaminfo">Junior | Math + CompSci</p>
-                                </div>
-                                <div class="col">
+                                    <p id="teaminfo">UI Designer</p>
+                                    <p id="teaminfo">Freshman | Molecular & Cell Biology</p>
+                                </a>
+                              </div>
+                              <div class="col">
+                                  <img src="../assets/img/netic/people/reid.svg" alt="reid" />
+                                  <h7>Reid</h7> <p id="teaminfo">Johnson</p>
+                                  <p id="teaminfo">Coding Consultant</p>
+                                  <p id="teaminfo">Junior | Math + CompSci</p>
+                              </div>
+                              <div class="col">
+                                <a href="https://www.linkedin.com/in/carlos-oriol/">
+                                  <img src="../assets/img/netic/people/carlos.svg" alt="carlos" />
                                   <a href="https://www.linkedin.com/in/carlos-oriol/">
-                                    <img src="../assets/img/netic/people/carlos.svg" alt="carlos" />
-                                    <a href="https://www.linkedin.com/in/carlos-oriol/">
-                                      <h7>Carlos</h7> <p id="teaminfo"> Oriol</p>
-                                    </a>
-                                      <p id="teaminfo">Design Consultant</p>
-                                      <p id="teaminfo">Sophomore | Data Science</p>
+                                    <h7>Carlos</h7> <p id="teaminfo"> Oriol</p>
                                   </a>
-                                </div>
+                                    <p id="teaminfo">Design Consultant</p>
+                                    <p id="teaminfo">Sophomore | Data Science</p>
+                                </a>
+                              </div>
                             </div>
+                          </div>
                         </div>
+                      </div>
+                      <div class="mobile-team">
+                        <div class="team-container">
+                          <div class="row d-flex flex-column flex-wrap flex-md-nowrap">
+                            <div class="row">
+                              <div class="col-4">
+                                <a href="https://www.linkedin.com/in/anika-singhania-b07b31179/">
+                                  <img src="../assets/img/netic/people/anika.svg" alt="anika" />
+                                </a>
+                                <a href="https://www.linkedin.com/in/anika-singhania-b07b31179/">
+                                  <h7>Anika</h7> <p id="teaminfo">Singhania</p>
+                                </a>
+                                <p id="teaminfo">Project Lead</p>
+                                <p id="teaminfo">Freshman | CompSci</p>
+                              </div>
+                              <div class="col-4">
+                                <a href="https://www.linkedin.com/in/allan-lee-22a0a614a/">
+                                  <img src="../assets/img/netic/people/allan.svg" alt="allan" />
+                                  <a href="https://www.linkedin.com/in/allan-lee-22a0a614a/">
+                                    <h7>Allan</h7>  <p id="teaminfo">Lee</p>
+                                  </a>
+                                    <p id="teaminfo">Design Consultant</p>
+                                    <p id="teaminfo">Junior | BioE</p>
+                                </a>
+                              </div>
+                              <div class="col-4">
+                                <a href="https://www.linkedin.com/in/leilani-chu-342563130/">
+                                  <img src="../assets/img/netic/people/leilani.svg" alt="leilani" />
+                                  <a href="https://www.linkedin.com/in/leilani-chu-342563130/">
+                                    <h7>Leilani</h7> <p id="teaminfo">Chu</p>
+                                  </a>
+                                    <p id="teaminfo">UI Designer</p>
+                                    <p id="teaminfo">Senior | Molecular & Cell Biology</p>
+                                </a>
+                              </div>
+                              <div class="col-4">
+                                <a href="https://www.linkedin.com/in/philippa-steinberg-78aa031a1/">
+                                  <img src="../assets/img/netic/people/philippa.svg" alt="philippa" />
+                                  <a href="https://www.linkedin.com/in/philippa-steinberg-78aa031a1/">
+                                    <h7>Philippa</h7> <p id="teaminfo">Steinberg</p>
+                                  </a>
+                                    <p id="teaminfo">UI Designer</p>
+                                    <p id="teaminfo">Freshman | Molecular & Cell Biology</p>
+                                </a>
+                              </div>
+                              <div class="col-4">
+                                  <img src="../assets/img/netic/people/reid.svg" alt="reid" />
+                                  <h7>Reid</h7> <p id="teaminfo">Johnson</p>
+                                  <p id="teaminfo">Coding Consultant</p>
+                                  <p id="teaminfo">Junior | Math + CompSci</p>
+                              </div>
+                              <div class="col-4">
+                                <a href="https://www.linkedin.com/in/carlos-oriol/">
+                                  <img src="../assets/img/netic/people/carlos.svg" alt="carlos" />
+                                  <a href="https://www.linkedin.com/in/carlos-oriol/">
+                                    <h7>Carlos</h7> <p id="teaminfo"> Oriol</p>
+                                  </a>
+                                    <p id="teaminfo">Design Consultant</p>
+                                    <p id="teaminfo">Sophomore | Data Science</p>
+                                </a>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                 </div>
             </div>
