alemany team refactored

--- a/projects/alemany-farms.html
+++ b/projects/alemany-farms.html
@@ -98,63 +98,109 @@
         </div>
 
       <div class="overview-container">
-          <div class="project-content-container">
-              <div class="row">
-                  <div class="col-lg-3">
-                      <h3 style="text-align: center;"
-                      id="team-header"><u style="border-bottom: 10px solid #99CCFF;">team</u></h3>
-                  </div>
-                  <div class="col-lg-9" style="font-style: normal;">
-                      <div class="team-container">
-                        <div class="row d-flex flex-column flex-wrap flex-md-nowrap">
-                          <div class="row">
-                              <div class="col">
-                                <a href="https://www.linkedin.com/in/kaylanh/">
-                                <img src="../assets/img/alemany/people/kaylan.svg" alt="kaylan" />
-                                </a>
-                                <h7>Kaylan</h7> <p id="teaminfo">Huang</p>
-                                </a>
-                                <p id="teaminfo">Project Lead</p>
-                                <p id="teaminfo">Senior | Economics</p>
-                              </div>
-                              <div class="col">
-                                <a href="https://www.linkedin.com/in/zeyad-el-arabaty-4a2b51148/">
-                                <img src="../assets/img/alemany/people/zeyed.svg" alt="Zeyad" />
-                                <h7>Zeyad</h7> <p id="teaminfo">El-Arabaty</p>
-                                  </a>
-                                  <p id="teaminfo">Project Lead</p>
-                                  <p id="teaminfo">Senior | CompSci</p>
-                                </a>
-                              </div>
-                              <div class="col">
-                                <a href="https://www.linkedin.com/in/qianning-tang-7b257b17a/">
-                                <img src="../assets/img/alemany/people/qianning.svg" alt="qianning" />
-                                <h7>Qianning</h7>  <p id="teaminfo">Tang</p>
-                                  </a>
-                                  <p id="teaminfo">Freshman | Sustanable Environmental Design</p>
-                                </a>
-                              </div>
-                              <div class="col">
-                                <a href="https://www.linkedin.com/in/ryan-yu-9730a5156/">
-                                <img src="../assets/img/alemany/people/ryan.svg" alt="ryan" />
-                                </a>
-                                <h7>Ryan</h7>  <p id="teaminfo">Yu</p>
-                              </a>
-                              <p id="teaminfo">Junior | Molecular and Cell Biology</p>
-                              </div>
-                              <div class="col">
-                                <a href="https://www.linkedin.com/in/shaantam/">
-                                <img src="../assets/img/alemany/people/shaantam.svg" alt="shaantam" />
-                                <a href="https://www.linkedin.com/in/shaantam/">
-                                  <h7>Shaantam</h7> <p id="teaminfo">Chawla</p>
-                                  </a>
-                                  <p id="teaminfo">Junior | EECS + Public Policy Minor</p>
-                                </a>
-                            </div>
-                          </div>
+        <div class="project-content-container">
+          <div class="row">
+            <div class="col-lg-3">
+                <h3 style="text-align: center;"
+                id="team-header"><u style="border-bottom: 10px solid #99CCFF;">team</u></h3>
+            </div>
+            <div class="col-lg-9" style="font-style: normal;">
+              <div class="web-team">
+                <div class="team-container">
+                  <div class="row d-flex flex-column flex-wrap flex-md-nowrap">
+                    <div class="row">
+                      <div class="col">
+                        <a href="https://www.linkedin.com/in/kaylanh/">
+                        <img src="../assets/img/alemany/people/kaylan.svg" alt="kaylan" />
+                        </a>
+                        <h7>Kaylan</h7> <p id="teaminfo">Huang</p>
+                        </a>
+                        <p id="teaminfo">Project Lead</p>
+                        <p id="teaminfo">Senior | Economics</p>
                       </div>
+                      <div class="col">
+                        <a href="https://www.linkedin.com/in/zeyad-el-arabaty-4a2b51148/">
+                        <img src="../assets/img/alemany/people/zeyed.svg" alt="Zeyad" />
+                        <h7>Zeyad</h7> <p id="teaminfo">El-Arabaty</p>
+                          </a>
+                          <p id="teaminfo">Project Lead</p>
+                          <p id="teaminfo">Senior | CompSci</p>
+                        </a>
+                      </div>
+                      <div class="col">
+                        <a href="https://www.linkedin.com/in/qianning-tang-7b257b17a/">
+                        <img src="../assets/img/alemany/people/qianning.svg" alt="qianning" />
+                        <h7>Qianning</h7>  <p id="teaminfo">Tang</p>
+                          </a>
+                          <p id="teaminfo">Freshman | Sustanable Environmental Design</p>
+                        </a>
+                      </div>
+                      <div class="col">
+                        <a href="https://www.linkedin.com/in/ryan-yu-9730a5156/">
+                        <img src="../assets/img/alemany/people/ryan.svg" alt="ryan" />
+                        </a>
+                        <h7>Ryan</h7>  <p id="teaminfo">Yu</p>
+                      </a>
+                      <p id="teaminfo">Junior | Molecular and Cell Biology</p>
+                      </div>
+                      <div class="col">
+                        <a href="https://www.linkedin.com/in/shaantam/">
+                        <img src="../assets/img/alemany/people/shaantam.svg" alt="shaantam" />
+                        <a href="https://www.linkedin.com/in/shaantam/">
+                          <h7>Shaantam</h7> <p id="teaminfo">Chawla</p>
+                          </a>
+                          <p id="teaminfo">Junior | EECS + Public Policy Minor</p>
+                        </a>
+                      </div>
+                    </div>
                   </div>
+                </div>
               </div>
+              <div class="mobile-team">
+                <div class="team-container">
+                  <div class="row d-flex flex-column flex-wrap flex-md-nowrap">
+                    <div class="row">
+                      <div class="col-3">
+                        <a href="https://www.linkedin.com/in/kaylanh/">
+                        <img src="../assets/img/alemany/people/kaylan.svg" alt="kaylan" />
+                        </a>
+                        <h7>Kaylan Huang</h7>
+                        </a>
+                      </div>
+                      <div class="col-3">
+                        <a href="https://www.linkedin.com/in/zeyad-el-arabaty-4a2b51148/">
+                        <img src="../assets/img/alemany/people/zeyed.svg" alt="Zeyad" />
+                        <h7>Zeyad El-Arabaty</h7>
+                          </a>
+                        </a>
+                      </div>
+                      <div class="col-3">
+                        <a href="https://www.linkedin.com/in/qianning-tang-7b257b17a/">
+                        <img src="../assets/img/alemany/people/qianning.svg" alt="qianning" />
+                        <h7>Qianning Tang</h7>
+                          </a>
+                        </a>
+                      </div>
+                      <div class="col-3">
+                        <a href="https://www.linkedin.com/in/ryan-yu-9730a5156/">
+                        <img src="../assets/img/alemany/people/ryan.svg" alt="ryan" />
+                        </a>
+                        <h7>Ryan Yu</h7>
+                      </a>
+                      </div>
+                      <div class="col-3">
+                        <a href="https://www.linkedin.com/in/shaantam/">
+                        <img src="../assets/img/alemany/people/shaantam.svg" alt="shaantam" />
+                        <a href="https://www.linkedin.com/in/shaantam/">
+                          <h7>Shaantam Chawla</h7>
+                          </a>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
