--- a/projects/makerspace.html
+++ b/projects/makerspace.html
@@ -124,51 +124,104 @@
                         id="team-header"><u style="border-bottom: 10px solid #99CCFF;">team</u></h3>
                     </div>
                     <div class="col-lg-9" style="font-style: normal;">
-                        <div class="team-container">
-                            <div class="row d-flex flex-column flex-wrap flex-md-nowrap">
-                            <div class="row">
-                                <div class="col">
-                                    <a href="https://www.linkedin.com/in/zulaika-zulkephli-a77a64183/">
-                                    <img src="../assets/img/makerspace/icons/zulaika.svg" alt="zulaika" />
-                                    </a>
-                                    <a href="https://www.linkedin.com/in/zulaika-zulkephli-a77a64183/">
-                                        <h7>Zulaika</h7> <p id="teaminfo">Zulkephli</p>
-                                        </a>
-                                        <p id="teaminfo">Project Lead</p>  
-                                        <p id="teaminfo">Senior | Psychology</p>
+                        <div class="web-team">
+                            <div class="team-container">
+                                <div class="row d-flex flex-column flex-wrap flex-md-nowrap">
+                                    <div class="row">
+                                        <div class="col">
+                                            <a href="https://www.linkedin.com/in/zulaika-zulkephli-a77a64183/">
+                                            <img src="../assets/img/makerspace/icons/zulaika.svg" alt="zulaika" />
+                                            </a>
+                                            <a href="https://www.linkedin.com/in/zulaika-zulkephli-a77a64183/">
+                                                <h7>Zulaika</h7> <p id="teaminfo">Zulkephli</p>
+                                                </a>
+                                                <p id="teaminfo">Project Lead</p>  
+                                                <p id="teaminfo">Senior | Psychology</p>
+                                        </div>
+                                        <div class="col">
+                                            <a href="https://www.linkedin.com/in/batu-akkas-416b0313b/">
+                                            <img src="../assets/img/makerspace/icons/batu.svg" alt="batu" />
+                                            </a>
+                                            <a href="https://www.linkedin.com/in/batu-akkas-416b0313b/">
+                                                <h7>Batu</h7> <p id="teaminfo">Akkas</p>
+                                                </a>
+                                                <p id="teaminfo">Freshman | BioE</p>
+                                        </div>
+                                        <div class="col">
+                                            <a href="https://www.linkedin.com/in/djasonchen/">
+                                            <img src="../assets/img/makerspace/icons/dan.svg" alt="dan" />
+                                            </a>
+                                            <a href="https://www.linkedin.com/in/djasonchen/">
+                                                <h7>Dan</h7> <p id="teaminfo">Chen</p>
+                                                </a>
+                                                <p id="teaminfo">Sophomore | Statistics</p>
+                                        </div>
+                                        <div class="col">
+                                            <img src="../assets/img/makerspace/icons/jeffrey.svg" alt="jeffrey" />
+                                            <h7>Jeffrey</h7> <p id="teaminfo">Shen</p>
+                                            <p id="teaminfo">Freshman | Architecture</p>
+                                        </div>
+                                        <div class="col">
+                                            <img src="../assets/img/makerspace/icons/natalie.svg" alt="natalie" />
+                                            <h7>Natalie</h7> <p id="teaminfo">Chu</p>
+                                            <p id="teaminfo">Freshman | Architecture</p>
+                                        </div>
+                                        <div class="col">
+                                            <img src="../assets/img/makerspace/icons/sunny.svg" alt="sunny" />
+                                            <h7>Sunny</h7> <p id="teaminfo">Hsu</p>
+                                            <p id="teaminfo">Freshman | CivE</p>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="col">
-                                    <a href="https://www.linkedin.com/in/batu-akkas-416b0313b/">
-                                    <img src="../assets/img/makerspace/icons/batu.svg" alt="batu" />
-                                    </a>
-                                    <a href="https://www.linkedin.com/in/batu-akkas-416b0313b/">
-                                        <h7>Batu</h7> <p id="teaminfo">Akkas</p>
-                                        </a>
-                                        <p id="teaminfo">Freshman | BioE</p>
-                                </div>
-                                <div class="col">
-                                    <a href="https://www.linkedin.com/in/djasonchen/">
-                                    <img src="../assets/img/makerspace/icons/dan.svg" alt="dan" />
-                                    </a>
-                                    <a href="https://www.linkedin.com/in/djasonchen/">
-                                        <h7>Dan</h7> <p id="teaminfo">Chen</p>
-                                        </a>
-                                        <p id="teaminfo">Sophomore | Statistics</p>
-                                </div>
-                                <div class="col">
-                                    <img src="../assets/img/makerspace/icons/jeffrey.svg" alt="jeffrey" />
-                                    <h7>Jeffrey</h7> <p id="teaminfo">Shen</p>
-                                    <p id="teaminfo">Freshman | Architecture</p>
-                                </div>
-                                <div class="col">
-                                    <img src="../assets/img/makerspace/icons/natalie.svg" alt="natalie" />
-                                    <h7>Natalie</h7> <p id="teaminfo">Chu</p>
-                                    <p id="teaminfo">Freshman | Architecture</p>
-                                </div>
-                                <div class="col">
-                                    <img src="../assets/img/makerspace/icons/sunny.svg" alt="sunny" />
-                                    <h7>Sunny</h7> <p id="teaminfo">Hsu</p>
-                                    <p id="teaminfo">Freshman | CivE</p>
+                            </div>
+                        </div>
+                        <div class="mobile-team">
+                            <div class="team-container">
+                                <div class="row d-flex flex-column flex-wrap flex-md-nowrap">
+                                    <div class="row">
+                                        <div class="col-4">
+                                            <a href="https://www.linkedin.com/in/zulaika-zulkephli-a77a64183/">
+                                            <img src="../assets/img/makerspace/icons/zulaika.svg" alt="zulaika" />
+                                            </a>
+                                            <a href="https://www.linkedin.com/in/zulaika-zulkephli-a77a64183/">
+                                                <h7>Zulaika Zulkephli</h7>
+                                                </a>
+                                                <p id="teaminfo">Project Lead</p>  
+                                                <p id="teaminfo">Senior | Psychology</p>
+                                        </div>
+                                        <div class="col-4">
+                                            <a href="https://www.linkedin.com/in/batu-akkas-416b0313b/">
+                                            <img src="../assets/img/makerspace/icons/batu.svg" alt="batu" />
+                                            </a>
+                                            <a href="https://www.linkedin.com/in/batu-akkas-416b0313b/">
+                                                <h7>Batu Akkas</h7>
+                                                </a>
+                                                <p id="teaminfo">Freshman | BioE</p>
+                                        </div>
+                                        <div class="col-4">
+                                            <a href="https://www.linkedin.com/in/djasonchen/">
+                                            <img src="../assets/img/makerspace/icons/dan.svg" alt="dan" />
+                                            </a>
+                                            <a href="https://www.linkedin.com/in/djasonchen/">
+                                                <h7>Dan Chen</h7>
+                                                </a>
+                                                <p id="teaminfo">Sophomore | Statistics</p>
+                                        </div>
+                                        <div class="col-4">
+                                            <img src="../assets/img/makerspace/icons/jeffrey.svg" alt="jeffrey" />
+                                            <h7>Jeffrey Shen</h7>
+                                            <p id="teaminfo">Freshman | Architecture</p>
+                                        </div>
+                                        <div class="col-4">
+                                            <img src="../assets/img/makerspace/icons/natalie.svg" alt="natalie" />
+                                            <h7>Natalie Chu</h7>
+                                            <p id="teaminfo">Freshman | Architecture</p>
+                                        </div>
+                                        <div class="col-4">
+                                            <img src="../assets/img/makerspace/icons/sunny.svg" alt="sunny" />
+                                            <h7>Sunny Hsu</h7> 
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
